--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/library.css" />
   </head>
 <body>
-<header style="width: 500px; height: 100px; background: #333; left:0; right: 0; margin: 0 auto;">Just for testing</header>
+<header class="align-middle" style="width: 500px; height: 100px; background: #1a1a1a; color: #fff;">Just for testing</header>
 
 
 
