--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="test/forms.html">Forms</a></li>
     <li><a href="test/meta.html">Meta</a></li>
     <li><a href="test/texts.html">Texts</a></li>
+    <li><a href="test/layout.html">Layout</a></li>
   </ul>
 </div>
 </body>
