Menu added to layout
Layout has been started, but still a LONG way to go. wrapper <main> added, as well as minor fixes to the normalizer.

--- a/test/layout.html
+++ b/test/layout.html
@@ -12,22 +12,22 @@
     </style>
   </head>
 <body>
-
-<header>
-  <nav class="nav-container">
-    <picture>
-      <a href="#" class="logo"><img src="../assets/media/placeholder-logo.png" alt="Placeholder Logo" /></a>
-    </picture>
-    <menu>
-      <ul class="flex-2">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
-    </menu>
-  </nav>
-</header>
-
+<main>
+  <header>
+    <nav class="nav-container">
+      <menu>
+        <picture>
+          <a href="#" class="logo"><img src="../assets/media/placeholder-logo.png" alt="Placeholder Logo" /></a>
+        </picture>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </menu>
+    </nav>
+  </header>
+</main>
 </body>
 </html>
