Changed menu coding
Changed how the menu in "Layout" is coded, with changing from "flex" to "grid" + minor changes here and there.

--- a/test/layout.html
+++ b/test/layout.html
@@ -15,17 +15,15 @@
 <main>
   <header>
     <nav class="nav-container">
-      <menu>
-        <picture>
-          <a href="#" class="logo"><img src="../assets/media/placeholder-logo.png" alt="Placeholder Logo" /></a>
-        </picture>
+      <div class="menu">
+        <input type="image" src="../assets/media/placeholder-logo.png" onclick=";location.reload();" />
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Support</a></li>
         </ul>
-      </menu>
+      </div>
     </nav>
   </header>
 </main>
