Article, Sidebar and minor fixes
Article, Sidebar and minor fixes

--- a/test/layout.html
+++ b/test/layout.html
@@ -26,6 +26,14 @@
       </div>
     </nav>
   </header>
+  <section>
+    <article>
+      <h1>Section / Content</h1>
+    </article>
+    <aside>
+      <h1>Aside / Sidebar</h1>
+    </aside>
+  </section>
 </main>
 </body>
 </html>
