--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.00002">
     <title>Lib</title>
     <link rel="stylesheet" href="dist/css/library.css" />
+    <style>
+      article {
+        height: 400px;
+      }
+    </style>
   </head>
 <body>
 <header class="align-middle" style="width: 500px; height: 100px; background: #1a1a1a; color: #fff;">Just for testing</header>
+<section>
+  <article tooltip="Just some text in a tooltip. Hooray!" tooltip-offset="bottom" tooltip-bottom="100px">Test</article>
+</section>
 
 
 
 <style type="text/css">.menu{position:fixed;right:0;left:0;bottom:0;margin:0 auto;width:300px;height:auto;padding:10px;border: 1px solid #333;background:#F1F1F1}.menu ul{list-style-type:none}</style>
 <div class="menu">
   <ul>
-    <li><a href="test/normalize.html">Normalize</a></li>
+    <li><a href="test/normalize.html" tooltip="Normalize">Normalize</a></li>
     <li><a href="test/headings.html">Headings</a></li>
     <li><a href="test/tables.html">Tables</a></li>
     <li><a href="test/forms.html">Forms</a></li>
     <li><a href="test/meta.html">Meta</a></li>
     <li><a href="test/texts.html">Texts</a></li>
-    <li><a href="test/layout.html">Layout</a></li>
+    <li><a href="test/layout.html" tooltip="Layout">Layout</a></li>
   </ul>
 </div>
 </body>
