--- a/test/layout.html
+++ b/test/layout.html
@@ -18,7 +18,7 @@
       <div class="menu">
         <input type="image" src="../assets/media/placeholder-logo.png" onclick=";location.reload();" />
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html" data-tooltip="Will actually take you to index.html" data-tooltip-offset="bottom">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Support</a></li>
