--- a/test/layout.html
+++ b/test/layout.html
@@ -6,9 +6,17 @@
     <title>Lib</title>
     <link rel="stylesheet" href="../dist/css/library.css" />
     <style media="screen">
-      .ie7 {
-        display: none !important;
-      }
+        .ie7 {
+            display: none !important;
+        }
+        
+        article {
+            background: #333;
+        }
+        
+        aside {
+            background: #CCC;
+        }
     </style>
   </head>
 <body>
