Bunch of adds and changes
Bunch of adds and changes

--- a/test/meta.html
+++ b/test/meta.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.00002">
+<meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
 <title>Meta</title>
 <link rel="stylesheet" href="../dist/css/library.css" />
 </head>
@@ -10,7 +10,7 @@
 
 <div id="meta">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.00002">
+  <meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
 </div>
 
 <style>
