--- a/test/normalize.html
+++ b/test/normalize.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.00002">
+		<meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
 		<title>Normalize</title>
 		<link rel="stylesheet" href="../dist/css/library.css" />
 		<script src="../assets/js/shiv.js"></script>
