--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <li><a href="test/meta.html">Meta</a></li>
             <li><a href="test/texts.html">Texts</a></li>
             <li><a href="test/layout.html" data-tooltip="Layout" data-tooltip-offset="left">Layout</a></li>
+            <li><a href="templates/temp1.html">Template 1</a></li>
           </ul>
         </div>
         
