--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <li><a href="test/forms.html">Forms</a></li>
             <li><a href="test/meta.html">Meta</a></li>
             <li><a href="test/texts.html">Texts</a></li>
-            <li><a href="test/layout.html" data-tooltip="Layout" data-tooltip-offset="left">Layout</a></li>
+            <li><a href="test/classes.html">Classes</a></li>
+            <li><a href="test/layout.html">Layout</a></li>
             <li><a href="templates/temp1.html">Template 1</a></li>
           </ul>
         </div>
