--- a/test/classes.html
+++ b/test/classes.html
@@ -25,6 +25,10 @@
 		div > div:nth-child(odd) {
 			background: #333;
 		}
+        div.helperclasses > div {
+            min-height: 200px;
+            width: 200px;
+        }
     </style>
   </head>
 <body>
@@ -38,6 +42,9 @@
 	<div class="column-4"></div>
 	<div class="column-3"></div>
 	<div class="column-1"></div>
+</div>
+<div class="helperclasses">
+    <div class="fixed-bottom-right"></div>
 </div>
 
 </body>
