--- a/test/classes.html
+++ b/test/classes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.00002">
     <title>Lib</title>
-    <link rel="stylesheet" href="../dist/css/library.css" />
+    <link rel="stylesheet" href="../css/library.css" />
     <style>
         section {
             background: #333;
