--- a/test/headings.html
+++ b/test/headings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
     <title>Lib</title>
-    <link rel="stylesheet" href="../dist/css/library.css" />
+    <link rel="stylesheet" href="../css/library.css" />
   </head>
 <body>
 
