--- a/test/normalize.html
+++ b/test/normalize.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
 		<title>Normalize</title>
-		<link rel="stylesheet" href="../dist/css/library.css" />
+		<link rel="stylesheet" href="../css/library.css" />
 		<script src="../assets/js/shiv.js"></script>
 	</head>
 	<body>
