--- a/test/forms.html
+++ b/test/forms.html
@@ -1,18 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
-    <title>Lib</title>
-    <link rel="stylesheet" href="../css/library.css" />
-    <style media="screen">
-      .ie7 {
-        display: none !important;
-      }
-    </style>
-  </head>
+<head>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+<title>Lib</title>
+<link href="../css/library.css" rel="stylesheet">
+<style media="screen">
+<![CDATA[
+    \.ie7 {
+    display: none !important;
+    }
+]]>
+</style>
+</head>
 <body>
-
 <form action="">
 <fieldset>
 <legend>Legend Test</legend>
@@ -20,17 +21,17 @@
 <input type="search">
 <input type="button" value="Submit">
 <button>Submit</button>
-<input type="checkbox" />
-<input type="checkbox" />
-<input type="checkbox" />
-<input type="checkbox" />
-<input type="checkbox" />
-<input type="color" class="ie7">
+<input type="checkbox">
+<input type="checkbox">
+<input type="checkbox">
+<input type="checkbox">
+<input type="checkbox">
+<input class="ie7" type="color">
 <input type="date">
 <input type="datetime-local">
 <input type="email">
 <input type="file">
-<input type="image" alt="" src="">
+<input alt="" src="" type="image">
 <input type="month">
 <input type="number">
 <input type="radio">
@@ -38,7 +39,7 @@
 <input type="radio">
 <input type="radio">
 <input type="radio">
-<input type="range" min="0" max="10">
+<input max="10" min="0" type="range">
 <input type="reset">
 <select>
 <option value="Test">Test</option>
@@ -47,6 +48,5 @@
 <textarea></textarea>
 </fieldset>
 </form>
-
 </body>
 </html>
