--- a/test/headings.html
+++ b/test/headings.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
-    <title>Lib</title>
-    <link rel="stylesheet" href="../css/library.css" />
-  </head>
+<head>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+<title>Lib</title>
+<link href="../css/library.css" rel="stylesheet">
+</head>
 <body>
-
-  <div id="headings-container">
-    <h1>h1 heading | H1 HEADING &#60;h1&#62;&#60;&#47;h1&#62; 0123456789</h1>
-    <h2>h2 heading | H2 HEADING &#60;h2&#62;&#60;&#47;h2&#62; 0123456789</h2>
-    <h3>h3 heading | H3 HEADING &#60;h3&#62;&#60;&#47;h3&#62; 0123456789</h3>
-    <h4>h4 heading | H4 HEADING &#60;h4&#62;&#60;&#47;h4&#62; 0123456789</h4>
-    <h5>h5 heading | H5 HEADING &#60;h5&#62;&#60;&#47;h5&#62; 0123456789</h5>
-    <h6>h6 heading | H6 HEADING &#60;h6&#62;&#60;&#47;h6&#62; 0123456789</h6>
-  </div>
-
+<div id="headings-container">
+<h1>h1 heading | H1 HEADING <h1></h1> 0123456789</h1>
+<h2>h2 heading | H2 HEADING <h2></h2> 0123456789</h2>
+<h3>h3 heading | H3 HEADING <h3></h3> 0123456789</h3>
+<h4>h4 heading | H4 HEADING <h4></h4> 0123456789</h4>
+<h5>h5 heading | H5 HEADING <h5></h5> 0123456789</h5>
+<h6>h6 heading | H6 HEADING <h6></h6> 0123456789</h6>
+</div>
 </body>
 </html>
