--- a/index.html
+++ b/index.html
@@ -1,66 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.00002">
-    <title>Lib</title>
-    <link rel="stylesheet" href="css/library.css" />
-    <style>
-        section {
-            background: #333;
-        }
-        article {
-            height: 400px;
-            background: #333;
-        }
-        table {width: 100%; height: 100%;}
-        table, tr th, tr td {
-            border: 1px solid #a1a1a1;
-            text-align: center;
-            vertical-align: middle;
-        }
-    </style>
-  </head>
+<head>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.00002" name="viewport">
+<title>Lib</title>
+<link href="css/library.css" rel="stylesheet">
+<style>
+  section {
+      background: #333;
+  }
+  article {
+      height: 400px;
+      background: #333;
+  }
+  table {width: 100%; height: 100%;}
+  table, tr th, tr td {
+      border: 1px solid #a1a1a1;
+      text-align: center;
+      vertical-align: middle;
+  }
+</style>
+</head>
 <body>
-    <main>
-       
-        <header style="width: 500px; height: 100px; margin:0 auto; background: #CCC; color: #fff;">
-            <table>
-                <tr>
-                    <th>xlg</th>
-                    <th>lg</th>
-                    <th>md</th>
-                    <th>sm</th>
-                    <th>xs</th>
-                    <th>xxs</th>
-                </tr>
-                <tr>
-                    <td>1920</td>
-                    <td>1280</td>
-                    <td>960</td>
-                    <td>640</td>
-                    <td>480</td>
-                    <td>384</td>
-                </tr>
-            </table>
-        </header>
-
-        <style type="text/css">.menu{position:fixed;right:0;left:0;bottom:0;margin:0 auto;width:300px;height:auto;padding:10px;border: 1px solid #333;background:#F1F1F1}.menu ul{list-style-type:none}</style>
-        <div class="menu">
-          <ul>
-            <li><a href="test/normalize.html" data-tooltip="Normalize" data-tooltip-offset="text">Normalize</a></li>
-            <li><a href="test/headings.html">Headings</a></li>
-            <li><a href="test/tables.html">Tables</a></li>
-            <li><a href="test/forms.html">Forms</a></li>
-            <li><a href="test/meta.html">Meta</a></li>
-            <li><a href="test/texts.html">Texts</a></li>
-            <li><a href="test/classes.html">Classes</a></li>
-            <li><a href="test/layout.html">Layout</a></li>
-            <li><a href="templates/temp1.html">Template 1</a></li>
-          </ul>
-        </div>
-        
-    </main>
-    <script src="assets/js/scripts.js"></script>
+<main>
+<header style="width: 500px; height: 100px; margin:0 auto; background: #CCC; color: #fff;">
+<table>
+<tr>
+<th>xlg</th>
+<th>lg</th>
+<th>md</th>
+<th>sm</th>
+<th>xs</th>
+<th>xxs</th>
+</tr>
+<tr>
+<td>1920</td>
+<td>1280</td>
+<td>960</td>
+<td>640</td>
+<td>480</td>
+<td>384</td>
+</tr>
+</table>
+</header>
+<style>
+  .menu{position:fixed;right:0;left:0;bottom:0;margin:0 auto;width:300px;height:auto;padding:10px;border: 1px solid #333;background:#F1F1F1}.menu ul{list-style-type:none}
+</style>
+<div class="menu">
+<ul>
+<li>
+<a data-tooltip-offset="text" data-tooltip="Normalize" href="test/normalize.html">Normalize</a>
+</li>
+<li>
+<a href="test/headings.html">Headings</a>
+</li>
+<li>
+<a href="test/tables.html">Tables</a>
+</li>
+<li>
+<a href="test/forms.html">Forms</a>
+</li>
+<li>
+<a href="test/meta.html">Meta</a>
+</li>
+<li>
+<a href="test/texts.html">Texts</a>
+</li>
+<li>
+<a href="test/classes.html">Classes</a>
+</li>
+<li>
+<a href="test/layout.html">Layout</a>
+</li>
+<li>
+<a href="templates/temp1.html">Template 1</a>
+</li>
+</ul>
+</div>
+</main>
+<script src="assets/js/scripts.js"></script>
 </body>
 </html>
