--- a/test/classes.html
+++ b/test/classes.html
@@ -1,51 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.00002">
-    <title>Lib</title>
-    <link rel="stylesheet" href="../css/library.css" />
-    <style>
-        section {
-            background: #333;
-        }
-        article {
-            height: 400px;
-            background: #333;
-        }
-        table {width: 100%; height: 100%;}
-        table, tr th, tr td {
-            border: 1px solid #a1a1a1;
-            text-align: center;
-            vertical-align: middle;
-        }
-		div > div {
-			background: #f0f0f0;
-		}
-		div > div:nth-child(odd) {
-			background: #333;
-		}
-        div.helperclasses > div {
-            min-height: 200px;
-            width: 200px;
-        }
-    </style>
-  </head>
+<head>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.00002" name="viewport">
+<title>Lib</title>
+<link href="../css/library.css" rel="stylesheet">
+<style>
+  section {
+              background: #333;
+          }
+          article {
+              height: 400px;
+              background: #333;
+          }
+          table {width: 100%; height: 100%;}
+          table, tr th, tr td {
+              border: 1px solid #a1a1a1;
+              text-align: center;
+              vertical-align: middle;
+          }
+  		div > div {
+  			background: #f0f0f0;
+  		}
+  		div > div:nth-child(odd) {
+  			background: #333;
+  		}
+          div.helperclasses > div {
+              min-height: 200px;
+              width: 200px;
+          }
+</style>
+</head>
 <body>
-
 <div class="row-container">
-	<div class="column-4"></div>
-	<div class="column-4"></div>
-	<div class="column-2"></div>
-	<div class="column-4"></div>
-	<div class="column-4"></div>
-	<div class="column-4"></div>
-	<div class="column-3"></div>
-	<div class="column-1"></div>
+<div class="column-4"></div>
+<div class="column-4"></div>
+<div class="column-2"></div>
+<div class="column-4"></div>
+<div class="column-4"></div>
+<div class="column-4"></div>
+<div class="column-3"></div>
+<div class="column-1"></div>
 </div>
 <div class="helperclasses">
-    <div class="fixed-bottom-right"></div>
+<div class="fixed-bottom-right"></div>
 </div>
-
 </body>
 </html>
