--- a/test/meta.html
+++ b/test/meta.html
@@ -2,17 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
+<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
 <title>Meta</title>
-<link rel="stylesheet" href="../css/library.css" />
+<link href="../css/library.css" rel="stylesheet">
 </head>
 <body>
-
 <div id="meta">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.00002, shrink-to-fit=no">
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
 </div>
-
 <style>
   div, div meta {
     display: block;
@@ -22,6 +20,8 @@
     user-select: all;
   }
 </style>
-<script>var d = document.getElementById('meta');d.innerText = d.innerHTML;</script>
+<script>
+  var d = document.getElementById('meta');d.innerText = d.innerHTML;
+</script>
 </body>
 </html>
