--- a/test/normalize.html
+++ b/test/normalize.html
@@ -10,71 +10,71 @@
 <body>
 <div class="container" id="text-container">
 <div id="headings-container">
-<h1>h1 heading | H1 HEADING <h1></h1> 0123456789</h1>
-<h2>h2 heading | H2 HEADING <h2></h2> 0123456789</h2>
-<h3>h3 heading | H3 HEADING <h3></h3> 0123456789</h3>
-<h4>h4 heading | H4 HEADING <h4></h4> 0123456789</h4>
-<h5>h5 heading | H5 HEADING <h5></h5> 0123456789</h5>
-<h6>h6 heading | H6 HEADING <h6></h6> 0123456789</h6>
+<h1>h1 heading | H1 HEADING 0123456789</h1>
+<h2>h2 heading | H2 HEADING 0123456789</h2>
+<h3>h3 heading | H3 HEADING 0123456789</h3>
+<h4>h4 heading | H4 HEADING 0123456789</h4>
+<h5>h5 heading | H5 HEADING 0123456789</h5>
+<h6>h6 heading | H6 HEADING 0123456789</h6>
 </div>
 <div id="paragraph-container">
-<p>This is just a test for paragraph <p></p>. 0123456789</p>
+<p>This is just a test for paragraph. 0123456789</p>
 <p>Pneumonoultramicroscopicsilicovolcanoconiosis</p>
-<b>This is just a test for bold tag <b></b>. 0123456789</b>
+<b>This is just a test for bold tag. 0123456789</b>
 <b>Pneumonoultramicroscopicsilicovolcanoconiosis</b>
-<i>This is just a test for italic tag <i></i>. 0123456789</i>
+<i>This is just a test for italic tag. 0123456789</i>
 <i>Pneumonoultramicroscopicsilicovolcanoconiosis</i>
-<u>This is just a test for underline tag <u></u>. 0123456789</u>
+<u>This is just a test for underline tag. 0123456789</u>
 <u>Pneumonoultramicroscopicsilicovolcanoconiosis</u>
-<strike>This is just a test for strike tag <strike></strike>. 0123456789</strike>
+<strike>This is just a test for strike tag. 0123456789</strike>
 <strike>Pneumonoultramicroscopicsilicovolcanoconiosis</strike>
-<pre>This is just a test for pre tag <pre></pre>. 0123456789</pre>
+<pre>This is just a test for pre tag. 0123456789</pre>
 <pre>Pneumonoultramicroscopicsilicovolcanoconiosis</pre>
-<code>This is just a test for code tag <code></code>. 0123456789</code>
+<code>This is just a test for code tag. 0123456789</code>
 <code>Pneumonoultramicroscopicsilicovolcanoconiosis</code>
-<tt>This is just a test for tt tag <tt></tt>. 0123456789</tt>
+<tt>This is just a test for tt tag. 0123456789</tt>
 <tt>Pneumonoultramicroscopicsilicovolcanoconiosis</tt>
-<blockquote>This is just a test for blockquote tag <blockquote></blockquote>. 0123456789</blockquote>
+<blockquote>This is just a test for blockquote tag. 0123456789</blockquote>
 <blockquote>Pneumonoultramicroscopicsilicovolcanoconiosis</blockquote>
-<small>This is just a test for small tag <small></small>. 0123456789</small>
+<small>This is just a test for small tag. 0123456789</small>
 <small>Pneumonoultramicroscopicsilicovolcanoconiosis</small>
-<font>This is just a test for font tag <font></font>. 0123456789</font>
+<font>This is just a test for font tag. 0123456789</font>
 <font>Pneumonoultramicroscopicsilicovolcanoconiosis</font>
-<center>This is just a test for center tag <center></center>. 0123456789</center>
+<center>This is just a test for center tag. 0123456789</center>
 <center>Pneumonoultramicroscopicsilicovolcanoconiosis</center>
-<em>This is just a test for em tag <em></em>. 0123456789</em>
+<em>This is just a test for em tag. 0123456789</em>
 <em>Pneumonoultramicroscopicsilicovolcanoconiosis</em>
-<strong>This is just a test for strong tag <strong></strong>. 0123456789</strong>
+<strong>This is just a test for strong tag. 0123456789</strong>
 <strong>Pneumonoultramicroscopicsilicovolcanoconiosis</strong>
-<sub>This is just a test for sub tag <sub></sub>. 0123456789</sub>
+<sub>This is just a test for sub tag. 0123456789</sub>
 <sub>Pneumonoultramicroscopicsilicovolcanoconiosis</sub>
-<sup>This is just a test for sup tag <sup></sup>. 0123456789</sup>
+<sup>This is just a test for sup tag. 0123456789</sup>
 <sup>Pneumonoultramicroscopicsilicovolcanoconiosis</sup>
-<del>This is just a test for del tag <del></del>. 0123456789</del>
+<del>This is just a test for del tag. 0123456789</del>
 <del>Pneumonoultramicroscopicsilicovolcanoconiosis</del>
-<samp>This is just a test for samp tag <samp></samp>. 0123456789</samp>
+<samp>This is just a test for samp tag. 0123456789</samp>
 <samp>Pneumonoultramicroscopicsilicovolcanoconiosis</samp>
-<big>This is just a test for big tag <big></big>. 0123456789</big>
+<big>This is just a test for big tag. 0123456789</big>
 <big>Pneumonoultramicroscopicsilicovolcanoconiosis</big>
-<var>This is just a test for big tag <var></var>. 0123456789</var>
+<var>This is just a test for big tag. 0123456789</var>
 <var>Pneumonoultramicroscopicsilicovolcanoconiosis</var>
-<mark>This is just a test for big tag <mark></mark>. 0123456789</mark>
+<mark>This is just a test for big tag. 0123456789</mark>
 <mark>Pneumonoultramicroscopicsilicovolcanoconiosis</mark>
-<ins>This is just a test for big tag <ins></ins>. 0123456789</ins>
+<ins>This is just a test for big tag. 0123456789</ins>
 <ins>Pneumonoultramicroscopicsilicovolcanoconiosis</ins>
-<kbd>This is just a test for big tag <kbd></kbd>. 0123456789</kbd>
+<kbd>This is just a test for big tag. 0123456789</kbd>
 <kbd>Pneumonoultramicroscopicsilicovolcanoconiosis</kbd>
 <details>
-<summary>This is just a test for summary tag <summary></summary>. 0123456789</summary>
-This is just a test for details tag <details></details>. 0123456789
+<summary>This is just a test for summary tag. 0123456789</summary>
+This is just a test for details tag. 0123456789
 </details>
 <details>
 <summary>Pneumonoultramicroscopicsilicovolcanoconiosis</summary>
 Pneumonoultramicroscopicsilicovolcanoconiosis
 </details>
-<abbr title="This is just a test for abbr tag &lt;abbr&gt;&lt;/abbr&gt;. 0123456789">This is just a test for abbr tag <abbr></abbr>. 0123456789</abbr>
+<abbr title="This is just a test for abbr tag &lt;abbr&gt;&lt;/abbr&gt;. 0123456789">This is just a test for abbr tag. 0123456789</abbr>
 <abbr title="Pneumonoultramicroscopicsilicovolcanoconiosis">Pneumonoultramicroscopicsilicovolcanoconiosis</abbr>
-This is just a test for text outside any tag <></>, but still inside <body></body>. 0123456789
+This is just a test for text outside any tag, but still inside. 0123456789
 Pneumonoultramicroscopicsilicovolcanoconiosis
 <a href="#">Link for testing</a>
 <div class="symbols">Symbol test: §½!"#¤%&/()=?`@£$€{[\</div>
