--- a/test/headings.html
+++ b/test/headings.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div id="headings-container">
-<h1>h1 heading | H1 HEADING <h1></h1> 0123456789</h1>
-<h2>h2 heading | H2 HEADING <h2></h2> 0123456789</h2>
-<h3>h3 heading | H3 HEADING <h3></h3> 0123456789</h3>
-<h4>h4 heading | H4 HEADING <h4></h4> 0123456789</h4>
-<h5>h5 heading | H5 HEADING <h5></h5> 0123456789</h5>
-<h6>h6 heading | H6 HEADING <h6></h6> 0123456789</h6>
+<h1>h1 heading | H1 HEADING 0123456789</h1>
+<h2>h2 heading | H2 HEADING 0123456789</h2>
+<h3>h3 heading | H3 HEADING 0123456789</h3>
+<h4>h4 heading | H4 HEADING 0123456789</h4>
+<h5>h5 heading | H5 HEADING 0123456789</h5>
+<h6>h6 heading | H6 HEADING 0123456789</h6>
 </div>
 </body>
 </html>
