--- a/test/texts.html
+++ b/test/texts.html
@@ -8,71 +8,71 @@
 </head>
 <body>
 <div id="headings-container">
-<h1>h1 heading | H1 HEADING <h1></h1> 0123456789</h1>
-<h2>h2 heading | H2 HEADING <h2></h2> 0123456789</h2>
-<h3>h3 heading | H3 HEADING <h3></h3> 0123456789</h3>
-<h4>h4 heading | H4 HEADING <h4></h4> 0123456789</h4>
-<h5>h5 heading | H5 HEADING <h5></h5> 0123456789</h5>
-<h6>h6 heading | H6 HEADING <h6></h6> 0123456789</h6>
+<h1>h1 heading | H1 HEADING 0123456789</h1>
+<h2>h2 heading | H2 HEADING 0123456789</h2>
+<h3>h3 heading | H3 HEADING 0123456789</h3>
+<h4>h4 heading | H4 HEADING 0123456789</h4>
+<h5>h5 heading | H5 HEADING 0123456789</h5>
+<h6>h6 heading | H6 HEADING 0123456789</h6>
 </div>
 <div id="paragraph-container">
-<p>This is just a test for paragraph <p></p>. 0123456789</p>
+<p>This is just a test for paragraph. 0123456789</p>
 <p>Pneumonoultramicroscopicsilicovolcanoconiosis</p>
-<b>This is just a test for bold tag <b></b>. 0123456789</b>
+<b>This is just a test for bold tag. 0123456789</b>
 <b>Pneumonoultramicroscopicsilicovolcanoconiosis</b>
-<i>This is just a test for italic tag <i></i>. 0123456789</i>
+<i>This is just a test for italic tag. 0123456789</i>
 <i>Pneumonoultramicroscopicsilicovolcanoconiosis</i>
-<u>This is just a test for underline tag <u></u>. 0123456789</u>
+<u>This is just a test for underline tag. 0123456789</u>
 <u>Pneumonoultramicroscopicsilicovolcanoconiosis</u>
-<strike>This is just a test for strike tag <strike></strike>. 0123456789</strike>
+<strike>This is just a test for strike tag. 0123456789</strike>
 <strike>Pneumonoultramicroscopicsilicovolcanoconiosis</strike>
-<pre>This is just a test for pre tag <pre></pre>. 0123456789</pre>
+<pre>This is just a test for pre tag. 0123456789</pre>
 <pre>Pneumonoultramicroscopicsilicovolcanoconiosis</pre>
-<code>This is just a test for code tag <code></code>. 0123456789</code>
+<code>This is just a test for code tag. 0123456789</code>
 <code>Pneumonoultramicroscopicsilicovolcanoconiosis</code>
-<tt>This is just a test for tt tag <tt></tt>. 0123456789</tt>
+<tt>This is just a test for tt tag. 0123456789</tt>
 <tt>Pneumonoultramicroscopicsilicovolcanoconiosis</tt>
-<blockquote>This is just a test for blockquote tag <blockquote></blockquote>. 0123456789</blockquote>
+<blockquote>This is just a test for blockquote tag. 0123456789</blockquote>
 <blockquote>Pneumonoultramicroscopicsilicovolcanoconiosis</blockquote>
-<small>This is just a test for small tag <small></small>. 0123456789</small>
+<small>This is just a test for small tag. 0123456789</small>
 <small>Pneumonoultramicroscopicsilicovolcanoconiosis</small>
-<font>This is just a test for font tag <font></font>. 0123456789</font>
+<font>This is just a test for font tag. 0123456789</font>
 <font>Pneumonoultramicroscopicsilicovolcanoconiosis</font>
-<center>This is just a test for center tag <center></center>. 0123456789</center>
+<center>This is just a test for center tag. 0123456789</center>
 <center>Pneumonoultramicroscopicsilicovolcanoconiosis</center>
-<em>This is just a test for em tag <em></em>. 0123456789</em>
+<em>This is just a test for em tag. 0123456789</em>
 <em>Pneumonoultramicroscopicsilicovolcanoconiosis</em>
-<strong>This is just a test for strong tag <strong></strong>. 0123456789</strong>
+<strong>This is just a test for strong tag. 0123456789</strong>
 <strong>Pneumonoultramicroscopicsilicovolcanoconiosis</strong>
-<sub>This is just a test for sub tag <sub></sub>. 0123456789</sub>
+<sub>This is just a test for sub tag. 0123456789</sub>
 <sub>Pneumonoultramicroscopicsilicovolcanoconiosis</sub>
-<sup>This is just a test for sup tag <sup></sup>. 0123456789</sup>
+<sup>This is just a test for sup tag. 0123456789</sup>
 <sup>Pneumonoultramicroscopicsilicovolcanoconiosis</sup>
-<del>This is just a test for del tag <del></del>. 0123456789</del>
+<del>This is just a test for del tag. 0123456789</del>
 <del>Pneumonoultramicroscopicsilicovolcanoconiosis</del>
-<samp>This is just a test for samp tag <samp></samp>. 0123456789</samp>
+<samp>This is just a test for samp tag. 0123456789</samp>
 <samp>Pneumonoultramicroscopicsilicovolcanoconiosis</samp>
-<big>This is just a test for big tag <big></big>. 0123456789</big>
+<big>This is just a test for big tag. 0123456789</big>
 <big>Pneumonoultramicroscopicsilicovolcanoconiosis</big>
-<var>This is just a test for big tag <var></var>. 0123456789</var>
+<var>This is just a test for big tag. 0123456789</var>
 <var>Pneumonoultramicroscopicsilicovolcanoconiosis</var>
-<mark>This is just a test for big tag <mark></mark>. 0123456789</mark>
+<mark>This is just a test for big tag. 0123456789</mark>
 <mark>Pneumonoultramicroscopicsilicovolcanoconiosis</mark>
-<ins>This is just a test for big tag <ins></ins>. 0123456789</ins>
+<ins>This is just a test for big tag. 0123456789</ins>
 <ins>Pneumonoultramicroscopicsilicovolcanoconiosis</ins>
-<kbd>This is just a test for big tag <kbd></kbd>. 0123456789</kbd>
+<kbd>This is just a test for big tag. 0123456789</kbd>
 <kbd>Pneumonoultramicroscopicsilicovolcanoconiosis</kbd>
 <details>
-<summary>This is just a test for summary tag <summary></summary>. 0123456789</summary>
-This is just a test for details tag <details></details>. 0123456789
+<summary>This is just a test for summary tag. 0123456789</summary>
+This is just a test for details tag. 0123456789
 </details>
 <details>
 <summary>Pneumonoultramicroscopicsilicovolcanoconiosis</summary>
 Pneumonoultramicroscopicsilicovolcanoconiosis
 </details>
-<abbr title="This is just a test for abbr tag &lt;abbr&gt;&lt;/abbr&gt;. 0123456789">This is just a test for abbr tag <abbr></abbr>. 0123456789</abbr>
+<abbr title="This is just a test for abbr tag &lt;abbr&gt;&lt;/abbr&gt;. 0123456789">This is just a test for abbr tag. 0123456789</abbr>
 <abbr title="Pneumonoultramicroscopicsilicovolcanoconiosis">Pneumonoultramicroscopicsilicovolcanoconiosis</abbr>
-This is just a test for text outside any tag <></>, but still inside <body></body>. 0123456789
+This is just a test for text outside any tag <></>, but still inside. 0123456789
 Pneumonoultramicroscopicsilicovolcanoconiosis
 <a href="#">Link for testing</a>
 <div class="symbols">Symbol test: §½!"#¤%&/()=?`@£$€{[\</div>
@@ -83,47 +83,47 @@ Pneumonoultramicroscopicsilicovolcanoconiosis
 यह सिर्फ परीक्षा है, דאָס איז נאָר פּרובירן, Бұл жай ғана сынақ, នេះគ្រាន់តែជាការធ្វើតេស្តប៉ុណ្ណោះ, 这只是测试, 이것은 단지 시험이다, हे फक्त चाचणी आहे, دا یوازې ازموینه ده,
 این فقط آزمون است, මෙය හුදෙක් පරීක්ෂණයකි, นี่เป็นการทดสอบเพียงอย่างเดียว, یہ صرف آزمائش ہے, Đây chỉ là thử nghiệm, これは単なるテストです
 </div>
-<div>This is just a test for text inside <div></div>. 0123456789</div>
+<div>This is just a test for text inside. 0123456789</div>
 <div>Pneumonoultramicroscopicsilicovolcanoconiosis</div>
-<article>This is just a test for text inside <article></article>. 0123456789</article>
+<article>This is just a test for text inside. 0123456789</article>
 <article>Pneumonoultramicroscopicsilicovolcanoconiosis</article>
-<aside>This is just a test for text inside <aside></aside>. 0123456789</aside>
+<aside>This is just a test for text inside. 0123456789</aside>
 <aside>Pneumonoultramicroscopicsilicovolcanoconiosis</aside>
-<canvas>This is just a test for text inside <canvas></canvas>. 0123456789</canvas>
+<canvas>This is just a test for text inside. 0123456789</canvas>
 <canvas>Pneumonoultramicroscopicsilicovolcanoconiosis</canvas>
-<command>This is just a test for text inside <command></command>. 0123456789</command>
+<command>This is just a test for text inside. 0123456789</command>
 <command>Pneumonoultramicroscopicsilicovolcanoconiosis</command>
-<embed>This is just a test for text inside <embed></embed>. 0123456789</embed>
+<embed>This is just a test for text inside. 0123456789</embed>
 <embed>Pneumonoultramicroscopicsilicovolcanoconiosis</embed>
-<figcaption>This is just a test for text inside <figcaption></figcaption>. 0123456789</figcaption>
+<figcaption>This is just a test for text inside. 0123456789</figcaption>
 <figcaption>Pneumonoultramicroscopicsilicovolcanoconiosis</figcaption>
-<figure>This is just a test for text inside <figure></figure>. 0123456789</figure>
+<figure>This is just a test for text inside. 0123456789</figure>
 <figure>Pneumonoultramicroscopicsilicovolcanoconiosis</figure>
-<footer>This is just a test for text inside <footer></footer>. 0123456789</footer>
+<footer>This is just a test for text inside. 0123456789</footer>
 <footer>Pneumonoultramicroscopicsilicovolcanoconiosis</footer>
-<header>This is just a test for text inside <header></header>. 0123456789</header>
+<header>This is just a test for text inside. 0123456789</header>
 <header>Pneumonoultramicroscopicsilicovolcanoconiosis</header>
-<hgroup>This is just a test for text inside <hgroup></hgroup>. 0123456789</hgroup>
+<hgroup>This is just a test for text inside. 0123456789</hgroup>
 <hgroup>Pneumonoultramicroscopicsilicovolcanoconiosis</hgroup>
-<keygen>This is just a test for text inside <hgroup></hgroup>. 0123456789</keygen>
+<keygen>This is just a test for text inside. 0123456789</keygen>
 <keygen>Pneumonoultramicroscopicsilicovolcanoconiosis</keygen>
-<nav>This is just a test for text inside <nav></nav>. 0123456789</nav>
+<nav>This is just a test for text inside. 0123456789</nav>
 <nav>Pneumonoultramicroscopicsilicovolcanoconiosis</nav>
-<output>This is just a test for text inside <output></output>. 0123456789</output>
+<output>This is just a test for text inside. 0123456789</output>
 <output>Pneumonoultramicroscopicsilicovolcanoconiosis</output>
-<rp>This is just a test for text inside <rp></rp>. 0123456789</rp>
+<rp>This is just a test for text inside. 0123456789</rp>
 <rp>Pneumonoultramicroscopicsilicovolcanoconiosis</rp>
-<rt>This is just a test for text inside <rt></rt>. 0123456789</rt>
+<rt>This is just a test for text inside. 0123456789</rt>
 <rt>Pneumonoultramicroscopicsilicovolcanoconiosis</rt>
-<ruby>This is just a test for text inside <ruby></ruby>. 0123456789</ruby>
+<ruby>This is just a test for text inside. 0123456789</ruby>
 <ruby>Pneumonoultramicroscopicsilicovolcanoconiosis</ruby>
-<section>This is just a test for text inside <section></section>. 0123456789</section>
+<section>This is just a test for text inside. 0123456789</section>
 <section>Pneumonoultramicroscopicsilicovolcanoconiosis</section>
-<source>This is just a test for text inside <source></source>. 0123456789</source>
+<source>This is just a test for text inside. 0123456789</source>
 <source>Pneumonoultramicroscopicsilicovolcanoconiosis</source>
-<time>This is just a test for text inside <time></time>. 0123456789</time>
+<time>This is just a test for text inside. 0123456789</time>
 <time>Pneumonoultramicroscopicsilicovolcanoconiosis</time>
-<wbr>This is just a test for text inside <wbr></wbr>. 0123456789</wbr>
+<wbr>This is just a test for text inside. 0123456789</wbr>
 <wbr>Pneumonoultramicroscopicsilicovolcanoconiosis</wbr>
 </div>
 </body>
