--- a/test/meta.html
+++ b/test/meta.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html>
 <head>
-<meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
-<title>Meta</title>
-<link href="../css/library.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+  <title>Meta</title>
+  <link href="../css/library.css" rel="stylesheet">
 </head>
-<body>
 <div id="meta">
-<meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
 </div>
 <style>
   div, div meta {
-    display: block;
-    -webkit-user-select: all;
-    -moz-user-select: all;
-    -ms-user-select: all;
-    user-select: all;
+  display: block;
+  -webkit-user-select: all;
+  -moz-user-select: all;
+  -ms-user-select: all;
+  user-select: all;
   }
 </style>
-<script>
-  var d = document.getElementById('meta');d.innerText = d.innerHTML;
-</script>
-</body>
-</html>
+<script>var d = document.getElementById('meta');d.innerText = d.innerHTML;</script>
