--- a/test/tables.html
+++ b/test/tables.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
-<html>
 <head>
-<meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
-<title>Lib</title>
-<link href="../css/library.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+  <title>Lib</title>
+  <link href="../css/library.css" rel="stylesheet">
 </head>
-<body>
-<!-- These tables are from W3Schools > https://www.w3schools.com/html/html_tables.asp -->
+<!-- These tables are from W3Schools > https://www.w3schools.com/html/html_tables.asp-->
 <table>
-<tr>
-<th>Firstname</th>
-<th>Lastname</th>
-<th>Age</th>
-</tr>
-<tr>
-<td>Jill</td>
-<td>Smith</td>
-<td>50</td>
-</tr>
-<tr>
-<td>Eve</td>
-<td>Jackson</td>
-<td>94</td>
-</tr>
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
 </table>
 <table>
-<thead>
-<tr>
-<th>Month</th>
-<th>Savings</th>
-</tr>
-</thead>
-<tfoot>
-<tr>
-<td>Sum</td>
-<td>$180</td>
-</tr>
-</tfoot>
-<tbody>
-<tr>
-<td>January</td>
-<td>$100</td>
-</tr>
-<tr>
-<td>February</td>
-<td>$80</td>
-</tr>
-</tbody>
+  <thead>
+    <tr>
+      <th>Month</th>
+      <th>Savings</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+      <td>Sum</td>
+      <td>$180</td>
+    </tr>
+  </tfoot>
+  <tbody>
+    <tr>
+      <td>January</td>
+      <td>$100</td>
+    </tr>
+    <tr>
+      <td>February</td>
+      <td>$80</td>
+    </tr>
+  </tbody>
 </table>
 <table>
-<colgroup>
-<col span="2" style="background-color:red">
-<col style="background-color:yellow">
-</colgroup>
-<tr>
-<th>ISBN</th>
-<th>Title</th>
-<th>Price</th>
-</tr>
-<tr>
-<td>3476896</td>
-<td>My first HTML</td>
-<td>$53</td>
-</tr>
-<tr>
-<td>5869207</td>
-<td>My first CSS</td>
-<td>$49</td>
-</tr>
+  <colgroup>
+    <col span="2" style="background-color:red;">
+    <col style="background-color:yellow;">
+  </colgroup>
+  <tr>
+    <th>ISBN</th>
+    <th>Title</th>
+    <th>Price</th>
+  </tr>
+  <tr>
+    <td>3476896</td>
+    <td>My first HTML</td>
+    <td>$53</td>
+  </tr>
+  <tr>
+    <td>5869207</td>
+    <td>My first CSS</td>
+    <td>$49</td>
+  </tr>
 </table>
-</body>
-</html>
