Minor fixes to normalize
Minor fixes to normalize

--- a/test/normalize.html
+++ b/test/normalize.html
@@ -5,6 +5,7 @@
   <title>Normalize</title>
   <link href="../css/library.css" rel="stylesheet">
   <script src="../assets/js/shiv.js"></script>
+  <script src="../assets/js/scripts.js"></script>
 </head>
 <div class="container" id="text-container">
   <div id="headings-container">
@@ -22,8 +23,8 @@
     <u>Pneumonoultramicroscopicsilicovolcanoconiosis</u>
     <strike>This is just a test for strike tag. 0123456789</strike>
     <strike>Pneumonoultramicroscopicsilicovolcanoconiosis</strike>
-    <pre>\nThis is just a test for pre tag. 0123456789      </pre>
-    <pre>\nPneumonoultramicroscopicsilicovolcanoconiosis      </pre><code>This is just a test for code tag. 0123456789</code><code>Pneumonoultramicroscopicsilicovolcanoconiosis</code>
+    <pre>This is just a test for pre tag. 0123456789      </pre>
+    <pre>Pneumonoultramicroscopicsilicovolcanoconiosis      </pre><code>This is just a test for code tag. 0123456789</code><code>Pneumonoultramicroscopicsilicovolcanoconiosis</code>
     <tt>This is just a test for tt tag. 0123456789</tt>
     <tt>Pneumonoultramicroscopicsilicovolcanoconiosis</tt>
     <blockquote>This is just a test for blockquote tag. 0123456789</blockquote>
