Show/hide helper class
Show/hide helper class with help of media queries.

--- a/test/classes.html
+++ b/test/classes.html
@@ -71,7 +71,7 @@
   </style>
 </head>
 <div class="flex-container" id="flex">
-  <div class="column-1">Flex System
+  <div class="column-1 show-desktop">Flex System
     <p>
       These boxes (including this one) utilize <em>"display flex"</em>. A container with the class <code>".flex-container"</code> is needed to enable this flex "system".<br>The breakpoints for the flex boxses are <b>"max-width: 768px;"</b> and <b>"max-width: 480px;"</b>
       Please don't use in "real projects" yet as this is still under development.
