--- a/test/classes.html
+++ b/test/classes.html
@@ -71,7 +71,7 @@
   </style>
 </head>
 <div class="flex-container" id="flex">
-  <div class="column-1 show-desktop">Flex System
+  <div class="column-1">Flex System
     <p>
       These boxes (including this one) utilize <em>"display flex"</em>. A container with the class <code>".flex-container"</code> is needed to enable this flex "system".<br>The breakpoints for the flex boxses are <b>"max-width: 768px;"</b> and <b>"max-width: 480px;"</b>
       Please don't use in "real projects" yet as this is still under development.
@@ -173,6 +173,19 @@
   <div class="column-6">.p-container .column-6</div>
   <div class="column-6">.p-container .column-6</div>
   <div class="column-6">.p-container .column-6</div>
+</div>
+<div class="p-container" id="p-container">
+  <div class="column-1">Hidden / Show classes</div>
+  <div class="column-1 hide-phone">.hide-phone</div>
+  <div class="column-2 hide-tablet">.hide-tablet</div>
+  <div class="column-2 hide-tab-x">.hide-tab-x</div>
+  <div class="column-3 hide-desktop">.hide-desktop</div>
+  <div class="column-3 hide-big-desktop">.hide-big-desktop</div>
+  <div class="column-3 show-big-desktop">.show-big-desktop</div>
+  <div class="column-4 show-desktop">.show-desktop</div>
+  <div class="column-4 show-tab-x">.show-tab-x</div>
+  <div class="column-4 show-tablet">.show-tablet</div>
+  <div class="column-4 show-phone">.show-phone</div>
 </div>
 <div class="container">
   <p class="text-col-1">Text Columns</p>
