Text Column is making no sense in Chrome
Text Column is making no sense in Chrome

--- a/test/classes.html
+++ b/test/classes.html
@@ -174,18 +174,18 @@
   <div class="column-6">.p-container .column-6</div>
   <div class="column-6">.p-container .column-6</div>
 </div>
-<div class="p-container" id="p-container">
+<div class="p-container" id="hide-show-classes">
   <div class="column-1">Hidden / Show classes</div>
-  <div class="column-1 hide-phone">.hide-phone</div>
-  <div class="column-2 hide-tablet">.hide-tablet</div>
-  <div class="column-2 hide-tab-x">.hide-tab-x</div>
-  <div class="column-3 hide-desktop">.hide-desktop</div>
-  <div class="column-3 hide-big-desktop">.hide-big-desktop</div>
-  <div class="column-3 show-big-desktop">.show-big-desktop</div>
-  <div class="column-4 show-desktop">.show-desktop</div>
-  <div class="column-4 show-tab-x">.show-tab-x</div>
-  <div class="column-4 show-tablet">.show-tablet</div>
-  <div class="column-4 show-phone">.show-phone</div>
+  <div class="column-5 hide-phone">.hide-phone</div>
+  <div class="column-5 hide-tablet">.hide-tablet</div>
+  <div class="column-5 hide-tab-x">.hide-tab-x</div>
+  <div class="column-5 hide-desktop">.hide-desktop</div>
+  <div class="column-5 hide-big-desktop">.hide-big-desktop</div>
+  <div class="column-5 show-big-desktop">.show-big-desktop</div>
+  <div class="column-5 show-desktop">.show-desktop</div>
+  <div class="column-5 show-tab-x">.show-tab-x</div>
+  <div class="column-5 show-tablet">.show-tablet</div>
+  <div class="column-5 show-phone">.show-phone</div>
 </div>
 <div class="container">
   <p class="text-col-1">Text Columns</p>
@@ -196,6 +196,8 @@
   <p class="text-col-5">.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5</p>
   <p class="text-col-6">.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6</p>
   <!-- Wrapped-->
+</div>
+<div class="container">
   <div class="text-col-1">Text Columns</div>
   <div class="text-col-1">.text-col-1</div>
   <div class="text-col-2">.text-col-2<br>.text-col-2</div>
