--- a/test/classes.html
+++ b/test/classes.html
@@ -188,7 +188,7 @@
   <div class="column-5 show-phone">.show-phone</div>
 </div>
 <div class="container">
-  <p class="text-col-1">Text Columns</p>
+  <p class="text-col-1" id="text-cols">Text Columns</p>
   <p class="text-col-1">.text-col-1</p>
   <p class="text-col-2">.text-col-2<br/>.text-col-2</p>
   <p class="text-col-3">.text-col-3<br/>.text-col-3<br/>.text-col-3</p>
