Nesting layout classes is now possible
Nesting layout classes is now possible, meaning you can apply, as example, .grid-container on .column-*

--- a/test/classes.html
+++ b/test/classes.html
@@ -70,6 +70,9 @@
     
   </style>
 </head>
+<div class="p-container">
+  <div class="column-1" style="background:#fff;color:green;">All of these "systems" utilize the ">" selector so nesting is possible.</div>
+</div>
 <div class="flex-container" id="flex">
   <div class="column-1">Flex System
     <p>
@@ -83,25 +86,25 @@
   <div class="column-2">.flex-container .column-2
     <p class="text-col-2">Test with .text-col-2<br>Test with .text-col-2</p>
   </div>
-  <div class="column-2">.flex-container .column-2</div>
-  <div class="column-3">.flex-container .column-3</div>
-  <div class="column-3">.flex-container .column-3</div>
-  <div class="column-3">.flex-container .column-3</div>
-  <div class="column-4">.flex-container .column-4</div>
-  <div class="column-4">.flex-container .column-4</div>
-  <div class="column-4">.flex-container .column-4</div>
-  <div class="column-4">.flex-container .column-4</div>
-  <div class="column-5">.flex-container .column-5</div>
-  <div class="column-5">.flex-container .column-5</div>
-  <div class="column-5">.flex-container .column-5</div>
-  <div class="column-5">.flex-container .column-5</div>
-  <div class="column-5">.flex-container .column-5</div>
-  <div class="column-6">.flex-container .column-6</div>
-  <div class="column-6">.flex-container .column-6</div>
-  <div class="column-6">.flex-container .column-6</div>
-  <div class="column-6">.flex-container .column-6</div>
-  <div class="column-6">.flex-container .column-6</div>
-  <div class="column-6">.flex-container .column-6</div>
+  <div class="column-2">.flex-container > .column-2</div>
+  <div class="column-3">.flex-container > .column-3</div>
+  <div class="column-3">.flex-container > .column-3</div>
+  <div class="column-3">.flex-container > .column-3</div>
+  <div class="column-4">.flex-container > .column-4</div>
+  <div class="column-4">.flex-container > .column-4</div>
+  <div class="column-4">.flex-container > .column-4</div>
+  <div class="column-4">.flex-container > .column-4</div>
+  <div class="column-5">.flex-container > .column-5</div>
+  <div class="column-5">.flex-container > .column-5</div>
+  <div class="column-5">.flex-container > .column-5</div>
+  <div class="column-5">.flex-container > .column-5</div>
+  <div class="column-5">.flex-container > .column-5</div>
+  <div class="column-6">.flex-container > .column-6</div>
+  <div class="column-6">.flex-container > .column-6</div>
+  <div class="column-6">.flex-container > .column-6</div>
+  <div class="column-6">.flex-container > .column-6</div>
+  <div class="column-6">.flex-container > .column-6</div>
+  <div class="column-6">.flex-container > .column-6</div>
 </div>
 <div class="grid-container" id="grid">
   <div class="column-1">Grid System
@@ -114,33 +117,33 @@
   <div class="column-1">.grid-container .column-1
     <p class="text-col-5">Test with .text-col-5<br>Test with .text-col-5<br>Test with .text-col-5<br>Test with .text-col-5<br>Test with .text-col-5</p>
   </div>
-  <div class="column-2">.grid-container .column-2</div>
-  <div class="column-2">.grid-container .column-2</div>
-  <div class="column-3">.grid-container .column-3</div>
-  <div class="column-3">.grid-container .column-3</div>
-  <div class="column-3">.grid-container .column-3</div>
-  <div class="column-4">.grid-container .column-4</div>
-  <div class="column-4">.grid-container .column-4</div>
-  <div class="column-4">.grid-container .column-4</div>
-  <div class="column-4">.grid-container .column-4</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-5">.grid-container .column-5</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
-  <div class="column-6">.grid-container .column-6</div>
+  <div class="column-2">.grid-container > .column-2</div>
+  <div class="column-2">.grid-container > .column-2</div>
+  <div class="column-3">.grid-container > .column-3</div>
+  <div class="column-3">.grid-container > .column-3</div>
+  <div class="column-3">.grid-container > .column-3</div>
+  <div class="column-4">.grid-container > .column-4</div>
+  <div class="column-4">.grid-container > .column-4</div>
+  <div class="column-4">.grid-container > .column-4</div>
+  <div class="column-4">.grid-container > .column-4</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-5">.grid-container > .column-5</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
+  <div class="column-6">.grid-container > .column-6</div>
 </div>
 <div class="p-container" id="p-container">
   <div class="column-1">Percentage System
@@ -153,26 +156,26 @@
   <div class="column-1">.p-container .column-1
     <p class="text-col-6">Test with .text-col-6<br>Test with .text-col-6<br>Test with .text-col-6<br>Test with .text-col-6<br>Test with .text-col-6<br>Test with .text-col-6</p>
   </div>
-  <div class="column-2">.p-container .column-2</div>
-  <div class="column-2">.p-container .column-2</div>
-  <div class="column-3">.p-container .column-3</div>
-  <div class="column-3">.p-container .column-3</div>
-  <div class="column-3">.p-container .column-3</div>
-  <div class="column-4">.p-container .column-4</div>
-  <div class="column-4">.p-container .column-4</div>
-  <div class="column-4">.p-container .column-4</div>
-  <div class="column-4">.p-container .column-4</div>
-  <div class="column-5">.p-container .column-5</div>
-  <div class="column-5">.p-container .column-5</div>
-  <div class="column-5">.p-container .column-5</div>
-  <div class="column-5">.p-container .column-5</div>
-  <div class="column-5">.p-container .column-5</div>
-  <div class="column-6">.p-container .column-6</div>
-  <div class="column-6">.p-container .column-6</div>
-  <div class="column-6">.p-container .column-6</div>
-  <div class="column-6">.p-container .column-6</div>
-  <div class="column-6">.p-container .column-6</div>
-  <div class="column-6">.p-container .column-6</div>
+  <div class="column-2">.p-container > .column-2</div>
+  <div class="column-2">.p-container > .column-2</div>
+  <div class="column-3">.p-container > .column-3</div>
+  <div class="column-3">.p-container > .column-3</div>
+  <div class="column-3">.p-container > .column-3</div>
+  <div class="column-4">.p-container > .column-4</div>
+  <div class="column-4">.p-container > .column-4</div>
+  <div class="column-4">.p-container > .column-4</div>
+  <div class="column-4">.p-container > .column-4</div>
+  <div class="column-5">.p-container > .column-5</div>
+  <div class="column-5">.p-container > .column-5</div>
+  <div class="column-5">.p-container > .column-5</div>
+  <div class="column-5">.p-container > .column-5</div>
+  <div class="column-5">.p-container > .column-5</div>
+  <div class="column-6">.p-container > .column-6</div>
+  <div class="column-6">.p-container > .column-6</div>
+  <div class="column-6">.p-container > .column-6</div>
+  <div class="column-6">.p-container > .column-6</div>
+  <div class="column-6">.p-container > .column-6</div>
+  <div class="column-6">.p-container > .column-6</div>
 </div>
 <div class="p-container" id="hide-show-classes">
   <div class="column-1">Hidden / Show classes</div>
@@ -206,8 +209,3 @@
   <div class="text-col-5">.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5</div>
   <div class="text-col-6">.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6</div>
 </div>
-<div class="text-col-1"></div>
-<div class="text-col-2"></div>
-<div class="text-col-3"></div>
-<div class="text-col-4"></div>
-<div class="text-col-5"></div>
