Fixed .text-col- (somewhat)
Fixed .text-col- (somewhat), thanks to @allen on StackOverflow

--- a/test/classes.html
+++ b/test/classes.html
@@ -209,3 +209,47 @@
   <div class="text-col-5">.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5</div>
   <div class="text-col-6">.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6</div>
 </div>
+<div class="container">
+  <p class="text-col-1" id="text-cols">Text Columns</p>
+  <p class="text-col-1">.text-col-1</p>
+  <p class="text-col-2">.text-col-2<br/>.text-col-2</p>
+  <p class="text-col-3">.text-col-3<br/>.text-col-3<br/>.text-col-3</p>
+  <p class="text-col-4">.text-col-4<br/>.text-col-4<br/>.text-col-4<br/>.text-col-4</p>
+  <p class="text-col-5">.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5<br/>.text-col-5</p>
+  <p class="text-col-6">.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6<br/>.text-col-6</p>
+  <!-- No <br>-->
+</div>
+<div class="container">
+  <div class="text-col-1">Text Columns</div>
+  <div class="text-col-1">.text-col-1</div>
+  <div class="text-col-2">
+    .text-col-2
+    .text-col-2
+  </div>
+  <div class="text-col-3">
+    .text-col-3
+    .text-col-3
+    .text-col-3
+  </div>
+  <div class="text-col-4">
+    .text-col-4
+    .text-col-4
+    .text-col-4
+    .text-col-4
+  </div>
+  <div class="text-col-5">
+    .text-col-5
+    .text-col-5
+    .text-col-5
+    .text-col-5
+    .text-col-5
+  </div>
+  <div class="text-col-6">
+    .text-col-6
+    .text-col-6
+    .text-col-6
+    .text-col-6
+    .text-col-6
+    .text-col-6
+  </div>
+</div>
