--- a/test/classes.html
+++ b/test/classes.html
@@ -179,16 +179,16 @@
 </div>
 <div class="p-container" id="hide-show-classes">
   <div class="column-1">Hidden / Show classes</div>
-  <div class="column-5 hide-phone">.hide-phone</div>
-  <div class="column-5 hide-tablet">.hide-tablet</div>
-  <div class="column-5 hide-tab-x">.hide-tab-x</div>
-  <div class="column-5 hide-desktop">.hide-desktop</div>
-  <div class="column-5 hide-big-desktop">.hide-big-desktop</div>
-  <div class="column-5 show-big-desktop">.show-big-desktop</div>
-  <div class="column-5 show-desktop">.show-desktop</div>
-  <div class="column-5 show-tab-x">.show-tab-x</div>
-  <div class="column-5 show-tablet">.show-tablet</div>
-  <div class="column-5 show-phone">.show-phone</div>
+  <div class="column-2 hide-phone" style="background:#3E0074;color:#fff;">.hide-phone</div>
+  <div class="column-2 hide-tablet" style="background:#511981;color:#fff;">.hide-tablet</div>
+  <div class="column-2 hide-tab-x" style="background:#64328f;color:#fff;">.hide-tab-x</div>
+  <div class="column-2 hide-desktop" style="background:#774c9d;color:#fff;">.hide-desktop</div>
+  <div class="column-1 hide-big-desktop" style="background:#8b66ab;">.hide-big-desktop</div>
+  <div class="column-2 show-phone" style="background:#2A80F7;color:#fff;">.show-phone</div>
+  <div class="column-2 show-tablet" style="background:#3f8cf7;color:#fff;">.show-tablet</div>
+  <div class="column-2 show-tab-x" style="background:#5499f8;color:#fff;">.show-tab-x</div>
+  <div class="column-2 show-desktop" style="background:#69a6f9;color:#fff;">.show-desktop</div>
+  <div class="column-1 show-big-desktop" style="background:#7fb2fa;">.show-big-desktop</div>
 </div>
 <div class="container">
   <p class="text-col-1" id="text-cols">Text Columns</p>
